--- a/ea-vkks-web/src/main/earh/resources/css/app_fonts.css
+++ b/ea-vkks-web/src/main/earh/resources/css/app_fonts.css
@@ -23,6 +23,14 @@
         url('../fonts/Philosopher/ttf/Philosopher-Bold.ttf') format('truetype'),
         url('../fonts/Philosopher/svg/Philosopher-Bold.svg') format('svg');
 }
+@font-face{
+    font-family:'Philosopher Italic';
+    src:url('../fonts/Philosopher/eot/Philosopher-Italic.eot');
+    src:url('../fonts/Philosopher/eot/Philosopher-Italic.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Philosopher/woff/Philosopher-Italic.woff') format('woff'),
+        url('../fonts/Philosopher/ttf/Philosopher-Italic.ttf') format('truetype'),
+        url('../fonts/Philosopher/svg/Philosopher-Italic.svg') format('svg');
+}
 
 @font-face{
     font-family:'Roboto';
