--- a/ea-vkks-web/src/main/earh/resources/css/app_style.css
+++ b/ea-vkks-web/src/main/earh/resources/css/app_style.css
@@ -47,6 +47,9 @@ textarea.x-form-text.x-form-text-default{
 input.x-form-text.x-form-text-default{
     min-height:25px;
 }
+.find_doc .x-form-text-wrap.x-form-text-wrap-default input[id*="textfield"]{
+    padding-right:24px;
+}
 /*combobox*/
 .x-border-box .x-form-text-wrap.x-form-text-wrap-default input[id*="combo"],
 .x-border-box .x-form-text-wrap.x-form-trigger-focus input[id*="combo"],
